<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2015 Huawei Technologies Co., Ltd. All rights reserved.
  ~    eSDK is licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="306.75dp"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/llTextContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="15dp"
                    android:text="@string/proxy_server_address"/>

                <EditText
                    android:id="@+id/et_proxy_server_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/te_mobile_login_input_line"
                    android:hint="@string/proxy_server_address"
                    android:inputType="textVisiblePassword"
                    android:maxLength="30"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/register_server_address"/>

                <EditText
                    android:id="@+id/et_register_server_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/te_mobile_login_input_line"
                    android:hint="@string/register_server_address"
                    android:inputType="textVisiblePassword"
                    android:maxLength="30"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/service_port"/>

                <EditText
                    android:id="@+id/et_server_port"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/te_mobile_login_input_line"
                    android:digits="0123456789"
                    android:hint="@string/service_port"
                    android:maxLength="30"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/account"/>

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/te_mobile_login_input_line"
                    android:hint="@string/account"
                    android:maxLength="30"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="13sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="15dp"
                    android:layout_marginStart="15dp"
                    android:text="@string/iphonepassword"/>

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/te_mobile_login_input_line"
                    android:hint="@string/iphonepassword"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="30"
                    android:paddingEnd="10dp"
                    android:paddingStart="10dp"
                    android:singleLine="true"
                    android:textSize="13sp">
                </EditText>


                <RadioGroup
                    android:id="@+id/vcType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/vc_smc"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="SMC"
                        android:checked="true"/>

                    <RadioButton
                        android:id="@+id/vc_hosted"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:text="Hosted"
                        />
                </RadioGroup>



                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="43dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/login"
                    android:textSize="15sp"/>

                <ImageView android:id="@+id/iv_login_setting"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/setting_more"/>

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>


</LinearLayout>