<?xml version="1.0" encoding="utf-8"?>
<!--
  ~    Copyright 2015 Huawei Technologies Co., Ltd. All rights reserved.
  ~    eSDK is licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_call_menu_popupwindow_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="bottom"
    android:orientation="horizontal" >
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|bottom" >

	    <View 
		    android:layout_width="fill_parent"
		    android:layout_height="1px"
		    android:id="@+id/share_data_line"
		    android:background="@drawable/te_line_crosswise"
		    android:layout_alignParentTop="true"
		    />


    <LinearLayout
        android:id="@+id/close_pip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/close_pip_img"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/close_pip_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/hide_video_window"
            android:textColor="@color/te_back_text_color"
            android:textSize="15sp" />
    </LinearLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>

    <LinearLayout
        android:id="@+id/switch_audio"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/switch_audio_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />

        <TextView
            android:id="@+id/switch_audio_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/switch_audio"
            android:textColor="@color/te_back_text_color"
            android:textSize="15sp" />
    </LinearLayout>
	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
    </LinearLayout>
	<View 
	    android:layout_width="1px"
	    android:layout_height="match_parent"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_vertical|bottom" >

	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1px"
	    android:id="@+id/share_pic_line"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>

    <LinearLayout
        android:id="@+id/switch_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/switch_camera_img"
            android:layout_width="40dp"
            android:layout_height="40dp"/>

        <TextView
            android:id="@+id/switch_camera_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/switch_local_camera"
            android:duplicateParentState="true"
            android:textColor="@color/te_back_text_color"
            android:textSize="15sp" />
    </LinearLayout>
    	<View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	/>

    <LinearLayout
        android:id="@+id/close_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/te_pad_menu_item"
        android:gravity="center_vertical" >

        <ImageView
            android:id="@+id/close_camera_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            />

        <TextView
            android:id="@+id/close_camera_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/close_local_camera"
            android:duplicateParentState="true"
            android:textColor="@color/te_back_text_color"
            android:textSize="15dp" />
    </LinearLayout>
     <View 
	    android:layout_width="fill_parent"
	    android:layout_height="1px"
	    android:background="@drawable/te_line_crosswise"
	    android:layout_alignParentTop="true"
	   />

</LinearLayout>
</LinearLayout>